Fix "switchery" dark mode by using css-variables. Cleaning in gui.js along the way.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,6 +13,7 @@
     --paper: url(../../images/paper.jpg);
     --ledAccent: #adadad;
     --ledBackground: #e9e9e9;
+    --switcherysecond: #c4c4c4;
 }
 
 * {
